@@ -358,3 +358,5 @@ guiActivateRuleMoreRules = More
 guiActivateRuleMoreCategories = More
 
 clearText = Clear Text
+
+ruleDetailsLink = Rule details on community.languagetool.org
