@@ -352,3 +352,5 @@ guiActivateRuleMoreRules = More
 guiActivateRuleMoreCategories = More
 
 clearText = Clear Text
+
+ruleDetailsLink = Rule details on community.languagetool.org
