@@ -58,6 +58,10 @@ LanguageTool Change Log
    contextual expressions to ignored words by using a new action
    of the disambiguator: "ignore_spelling" 
 
+-stand-alone GUI:
+    -The "More..." dialog now contains a link to community.languagetool.org
+     with details about the matching rule
+    
 -API:
     -incompatible change: changed the return type of Rule.getLocQualityIssueType()
      from String to ITSIssueType
